Fixed the overlay issue on firefox

--- a/compass/sass/_portfolio.scss
+++ b/compass/sass/_portfolio.scss
@@ -245,6 +245,10 @@
       position: absolute;
       opacity: 0;
       transition: opacity 0.3s ease-in;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
     }
     h6 {
       text-transform: uppercase;
